--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">toVisit_Ram_C0779370_android</string>
-    <string name="api_key">AIzaSyB45lwuNXNnXYsc3WHA1QyJKIkxqE-Rb7A</string>
-    <string name="api_key_places">AIzaSyB45lwuNXNnXYsc3WHA1QyJKIkxqE-Rb7A</string>
+    <string name="api_key">api key</string>
+    <string name="api_key_places">api key</string>
 </resources>
